# Machi_Koro

./: .gitignore  CMakeLists.txt  README.md  TestVueCarte.pro  account.cpp  account.h  allCards.cpp  allCards.h  bank.cpp  bank.h  banque.cpp  banque.h  baseCard.cpp  baseCard.h  board.cpp  board.h  cardColor.h  carte.cpp  carte.h  carteCouleur.h  compte.h  de.h  deluxeExtension.cpp  deluxeExtension.h  dice.cpp  dice.h  establishmentCard.cpp  establishmentCard.h  establismentCard.h  game.cpp  game.h  global.cpp  global.h  greenValleyExtension.h  icon.cpp  icon.h  joueur.cpp  joueur.h  main.cpp  marinaExtension.h  (+12 more)
LO21 - Machi Koro/: main.cpp
LO21 - Machi Koro.xcodeproj/: project.pbxproj
Machi_Koro_Qt/: Machi_Koro_Qt.pro
Qt/: ViewOnePlayer.cpp  ViewOnePlayer.h  viewCard.cpp  viewCard.h  viewDice.cpp  viewDice.h  viewGame.cpp  viewMessage.cpp  viewMessage.h  viewMonument.cpp  viewMonument.h  viewSet.cpp  viewSet.h  viewSetting.cpp  viewSetting.h
Xavier/: baseCard.h
bank/: account.cpp  account.h  bank.cpp  bank.h
build-Machi_Koro_Qt-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
cards/: allCards.cpp  allCards.h  baseCard.cpp  baseCard.h  cardColor.cpp  cardColor.h  establishmentCard.cpp  establishmentCard.h  icon.cpp  icon.h  monument.cpp  monument.h
extensions/: deluxeExtension.h  greenValleyExtension.h  marinaExtension.cpp  marinaExtension.h
formatter/: formatter.cpp  formatter.h
game/: board.cpp  board.h  dice.cpp  dice.h  game.cpp  game.h  machiKoro.cpp  machiKoro.h
interface/: AI.cpp  AI.h  Ai.cpp  Ai.h  cli.cpp  (+5 more)
(+92 files in other folders)
